datepicker fix - aligns a datepicker (in a modal) to the right

--- a/src/legacy/datepicker/style.scss
+++ b/src/legacy/datepicker/style.scss
@@ -1,9 +1,14 @@
 @charset "utf-8";
-@import "../../../node_modules/@govflanders/vl-ui-core/src/scss/core";
-@import "../../../node_modules/@govflanders/vl-ui-core-4.1.24/src/scss/generic/iconfont";
+@import '../../../node_modules/@govflanders/vl-ui-core/src/scss/core';
+@import '../../../node_modules/@govflanders/vl-ui-core-4.1.24/src/scss/generic/iconfont';
 @import '../../../node_modules/@govflanders/vl-ui-input-field/src/scss/input-field';
 @import '../../../node_modules/@govflanders/vl-ui-input-addon/src/scss/input-addon';
 @import '../../../node_modules/@govflanders/vl-ui-tooltip/src/scss/tooltip';
 @import '../../../node_modules/@govflanders/vl-ui-input-group/src/scss/input-group';
 @import '../../../node_modules/@govflanders/vl-ui-datepicker/src/scss/datepicker';
 @import '../../../node_modules/@govflanders/vl-ui-util/src/scss/util';
+
+.flatpickr-calendar {
+  left: auto !important;
+  right: 0 !important;
+}
